# bi-sales-simulator-spark

./: .env.template  .python-version  README.md  log4j.properties  pyproject.toml  requirements.txt
notebooks/test/: test_spark_logging.ipynb  test_spark_session.ipynb
src/producer/: main.py
src/utility/catalog_manager/: __init__.py  catalog_builder.py  database_builder.py
src/utility/log_manager/: __init__.py  logger.py
src/utility/path_manager/: __init__.py  path_builder.py
src/utility/session_manager/: __init__.py  spark_session.py
utility/catalog_manager/: database_builder.py
utility/log_manager/: logger.py
utility/session_manager/: spark_session.py
