[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-sales-simulator-spark"
version = "0.1.0"
description = ""
dependencies = [
    "pyspark",
    "python-dotenv"
]

[tool.setuptools]
package-dir = {"" = "utility"}

[tool.setuptools.packages.find]
where = ["packages"]