[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bi.sales.simulator.spark"
version = "0.1.0"
description = "A local Spark project for sales simulation"
dependencies = [
    "pyspark>=3.5",
    "delta-spark>=3.0.0",
    "python-dotenv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
